Fix footer icon spacing, size

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -385,6 +385,11 @@ footer
 	margin-top - footer-height
 
 	#content
+		.contact
+			line-height 3em
+			div
+				display inline
+				padding 0px .3em
 		display table-cell
 		vertical-align middle
 		font-size 0.8em
